syntax = "proto3";

package caster;

option go_package = "github.com/eugene-ruby/murmapp.caster/proto;casterpb";

message SendMessageRequest {
  bytes encrypted_api_key_bot = 1;
  string api_endpoint = 2;
  bytes encrypted_payload = 3;
}
